@@ -1,3 +1,7 @@
+2001-09-04  John Levon  <moz@compsoc.man.ac.uk>
+
+	* oprofile.c: change lvtpc_apic_restore to be more careful !
+ 
 2001-09-02  John Levon  <moz@compsoc.man.ac.uk>
 
 	* oprofile.c: don't allow unload on SMP unless allow_unload
